fixed error on Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,7 @@ VOLUME [ "/etc/earnapp" ]
 
 WORKDIR /app
 COPY src src
-RUN cp /app/src/install.sh /app/install && chmod a+x /usr/bin/install && \
+RUN cp /app/src/install.sh /usr/bin/install && chmod a+x /usr/bin/install && \
 cp /app/src/myip.sh /usr/bin/myip && chmod a+x /usr/bin/myip
 
 RUN bash /app/src/setup.sh && rm -r /app/src
