--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [fazalfarhan01]
-custom: ["https://www.paypal.me/fazalfarhan01", "BTC: 1PdUFXmVUxy88NRPJ2RFuhyjUqMiJyZybR"]
+custom: ["https://www.paypal.me/fazalfarhan01"]
