--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [fazalfarhan01]
+github: fazalfarhan01
 custom: ["https://www.paypal.me/fazalfarhan01"]
