scheduling github workflow

--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -2,6 +2,8 @@ name: Publish Multiarch Image
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron:  '0 9 * * *' # RUN @9AM Everyday
 
 jobs:
   build:
