--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -39,7 +39,7 @@ jobs:
           docker buildx build --push \
           -t fazalfarhan01/earnapp:latest \
           -t fazalfarhan01/earnapp:$(cat ./version) \
-          --platform linux/amd64 app
+          --platform linux/amd64,linux/arm/v7,linux/arm64 app
 
       - name: Update Docker Hub Readme
         uses: peter-evans/dockerhub-description@v2
