--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Build & Push - Latest
         run: |
           docker buildx build --push \
-          -t fazalfarhan01/earnapp:latest-dev \
-          -t fazalfarhan01/earnapp:$(cat ./version)-dev \
+          -t fazalfarhan01/earnapp:latest \
+          -t fazalfarhan01/earnapp:$(cat ./version) \
           --platform linux/amd64,linux/arm/v7,linux/arm64 app
 
       - name: Update Docker Hub Readme
