--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -3,8 +3,8 @@ name: Publish Multiarch Image
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 4 * * *' # RUN @9AM Everyday
-
+    - cron:  '10 3 * * *' # RUN @3:10 UTC Everyday
+    
 jobs:
   build:
     runs-on: ubuntu-latest
