--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: "3.3"
 services:
   app:
-    build: app
     image: fazalfarhan01/earnapp
     privileged: true
     volumes:
-       - /sys/fs/cgroup:/sys/fs/cgroup:ro
-       - ./etc:/etc/earnapp
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - ./etc:/etc/earnapp
+  lite:
+    build: build/lite
+    image: fazalfarhan01/earnapp:lite
+    volumes:
+      - ./etc:/etc/earnapp
+    environment:
+      EARNAPP_UUID: sdk-node-GET_YOUR_OWN_XD
