--- a/.github/workflows/debian_build.yml
+++ b/.github/workflows/debian_build.yml
@@ -40,11 +40,4 @@ jobs:
           docker buildx build --push \
           -t fazalfarhan01/earnapp:debian \
           -t fazalfarhan01/earnapp:debian-$(cat ./version) \
-          --platform linux/amd64,linux/arm/v7,linux/arm64 build/debian
-
-      - name: Build & Push - Debian ARMv6
-        run: |
-          docker buildx build --push \
-          -t fazalfarhan01/earnapp:debian \
-          -t fazalfarhan01/earnapp:debian-$(cat ./version) \
-          --platform linux/arm/v6 build/debian
+          --platform linux/amd64,linux/arm/v7,linux/arm/v7,linux/arm64 build/debian
